crates/cella-codegen/src/schema/snapshots/cella_codegen__schema__parse__tests__numeric_constraints.snap
---
source: crates/cella-codegen/src/schema/parse.rs
assertion_line: 381
expression: result
---
ParsedSchema {
    definitions: {},
    root: SchemaNode {
        title: None,
        description: None,
        deprecated: false,
        deprecation_message: None,
        schema_type: Some(
            Single(
                Integer,
            ),
        ),
        properties: {},
        required: [],
        additional_properties: None,
        pattern_properties: {},
        items: None,
        one_of: [],
        all_of: [],
        any_of: [],
        enum_values: [],
        ref: None,
        minimum: Some(
            0.0,
        ),
        maximum: Some(
            100.0,
        ),
        pattern: None,
        format: None,
        default_value: None,
        unevaluated_properties: None,
        definitions: {},
    },
}
