crates/cella-codegen/src/schema/snapshots/cella_codegen__schema__parse__tests__pattern_properties.snap
---
source: crates/cella-codegen/src/schema/parse.rs
assertion_line: 371
expression: result
---
ParsedSchema {
    definitions: {},
    root: SchemaNode {
        title: None,
        description: None,
        deprecated: false,
        deprecation_message: None,
        schema_type: Some(
            Single(
                Object,
            ),
        ),
        properties: {},
        required: [],
        additional_properties: None,
        pattern_properties: {
            "^x-": SchemaNode {
                title: None,
                description: None,
                deprecated: false,
                deprecation_message: None,
                schema_type: Some(
                    Single(
                        String,
                    ),
                ),
                properties: {},
                required: [],
                additional_properties: None,
                pattern_properties: {},
                items: None,
                one_of: [],
                all_of: [],
                any_of: [],
                enum_values: [],
                ref: None,
                minimum: None,
                maximum: None,
                pattern: None,
                format: None,
                default_value: None,
                unevaluated_properties: None,
                definitions: {},
            },
        },
        items: None,
        one_of: [],
        all_of: [],
        any_of: [],
        enum_values: [],
        ref: None,
        minimum: None,
        maximum: None,
        pattern: None,
        format: None,
        default_value: None,
        unevaluated_properties: None,
        definitions: {},
    },
}
